# WiringPiBSD

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build  compile_commands.json
.github/workflows/: build.yml
cmake/: netbsd-aarch64-cross-compile.cmake
devLib/: CMakeLists.txt  gertboard.c  lcd128x64.c  piGlow.c  scrollPhat.c
devLib/src/: ds1302.c  gertboard.c  lcd.c  lcd128x64.c  maxdetect.c  piFace.c  piFaceOld.c  piGlow.c  piNes.c  scrollPhat.c
documentation/deutsch/: functions.md
documentation/english/: functions.md
examples/: ds1302.c  isr_debounce.c  okLed.c  speed.c
examples/Gertboard/: 7segments.c
examples/PiGlow/: piglow.c
examples/scrollPhat/: scphat.c
gpio/: CMakeLists.txt  gpio.c  readall.c
gpio/src/: gpio.c  readall.c
wiringPi/: CMakeLists.txt  Makefile  ads1115.c  ads1115.h  drcNet.c  drcNet.h  drcSerial.h  ds18b20.h  dtb.c  dtb.h  gpioirq.h  htu21d.h  max31855.c  mcp23016.h  mcp23016reg.h  mcp4802.h  ofw.c  ofw.h  rht03.h  softServo.h  wiringPi.c  wiringPi.h  wiringPiI2C.c  wiringPiLegacy.c  wiringPiSPI.c  wiringShift.h  wpiExtensions.c
wiringPi/include/: bmp180.h  bsd_gpio.h  dtb.h  max31855.h  max5322.h  mcp23008.h  mcp23017.h  mcp23s08.h  mcp23s17.h  mcp23x08.h  mcp23x0817.h  mcp3002.h  mcp3004.h  mcp3422.h  pcf8574.h  pcf8591.h  pseudoPins.h  sn3218.h  softPwm.h  softTone.h  sr595.h  wiringPi.h  wiringPiI2C.h  wiringPiLegacy.h  wiringPiSPI.h  wiringSerial.h  wpiExtensions.h
wiringPi/src/: bsd_gpio.c  drcNet.c  ds18b20.c  dtb.c  gpioirq.c  mcp23008.c  mcp23016.c  mcp23017.c  mcp23s08.c  mcp23s17.c  ofw.c  rht03.c  softPwm.c  softServo.c  softTone.c  wiringPi.c  wiringPiI2C.c  wiringPiLegacy.c  wiringPiSPI.c  wiringSerial.c  wpiExtensions.c
wiringPi/test/: wpi_test.h
wiringPiD/: CMakeLists.txt  daemonise.c  drcNetCmd.h  make.old  network.c  runRemote.c  wiringpid.c
wiringPiD/src/: daemonise.c  daemonise.h  network.c  network.h  runRemote.c  runRemote.h  wiringpid.c
